<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/iv_poster_bg"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/poster_background"
            android:scaleType="fitXY"
            android:src="@color/blue_500"
            android:tint="@color/grey_transparent"
            tools:ignore="UseAppTint" />

        <ImageButton
            android:id="@+id/btn_back"
            style="@style/ImageButtonGeneral"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_arrow_back_white" />

        <ImageButton
            android:id="@+id/btn_favorite"
            style="@style/ImageButtonGeneral"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/bookmark_button"
            android:src="@drawable/ic_bookmark_white" />

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="140dp"
            android:layout_height="180dp"
            android:layout_below="@id/iv_poster_bg"
            android:layout_marginStart="12dp"
            android:layout_marginTop="-110dp"
            android:contentDescription="@string/poster"
            android:src="@color/teal_200" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextContent.Bold"
            android:layout_width="match_parent"
            android:layout_alignTop="@+id/iv_poster"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@+id/iv_poster"
            android:ellipsize="end"
            android:maxLines="3"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/tv_rating"
            style="@style/TextContent"
            android:layout_below="@id/iv_poster_bg"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="20dp"
            android:drawablePadding="3dp"
            android:gravity="center_vertical"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_star_gold"
            tools:text="@string/rating" />

        <TextView
            android:id="@+id/tv_tag_line"
            style="@style/TextContent.Medium"
            android:layout_below="@id/iv_poster"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:maxLines="2"
            android:textSize="16sp"
            tools:text="@string/tag_line" />

        <TextView
            android:id="@+id/tv_release_date"
            style="@style/TextContent"
            android:layout_below="@id/tv_tag_line"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            tools:text="@string/release_date" />

        <TextView
            android:id="@+id/tv_overview_title"
            style="@style/TextContent.Medium"
            android:layout_below="@id/tv_release_date"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/overview"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/TextContent"
            android:layout_width="match_parent"
            android:layout_below="@id/tv_overview_title"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            tools:text="@string/overview" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/detail_shimmer_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationZ="90dp"
            android:visibility="gone"
            shimmer:shimmer_duration="1300">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/placeholder_activity_detail" />
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

    </RelativeLayout>
</ScrollView>
